--- a/K2/K2.md
+++ b/K2/K2.md
@@ -171,3 +171,89 @@ Generalnie do końca nie wiadomo jak się zmieniają te polimery w okolicy warst
 4. Teoria warstwy umocnionej
 5. Teoria odtwarzania wiązań
 6. Teoria bariery antydyfuzyjnej i ochrony antykorozyjnej
+
+### Wtryskiwanie
+
+Wyroby otrzymywane metodą wtrysku: 
+* gotowe produkty o masie do 0.01g do 70 kg, np. części dla mikroniki, pojemniki transportowe, kabiny telefoniczne
+
+Tworzywa: 
+
+* **termoplastyczne**
+* termoutwardzalne
+* chemoutwardzalne
+
+Zalety:
+
+* możliwość wytwarzania skomplikowanych wyborów w jednym procesie technologicznym
+* mały/żaden udział obróbek wykańczających
+* powtarzalne właściwości
+* automatyzacja, sterowanie i kontrola komputerowa
+* w porównaniu z obróbką metali:
+	* mniej operacji technologicznych
+	* mniejsze zużycie energii, wody i pracy
+	* niska emisja związku szkodliwych dla otoczenia
+
+Wady:
+
+* Długi czas amortyzacji instalacji i wysokie koszty uruchomienia produkcji
+	* wysoki koszt zakupu maszyn (wtryskarek)
+	* wysoki koszt zakupu oprzyrządowania (form)
+* potrzeba wykwalifikowanych pracowników nadzoru technicznego
+* wąska tolerancja parametrów przetwórstwa
+* długi czas przygotowania produkcji (wykonywanie form0)
+
+![[Pasted image 20221020145102.png]]
+
+![[Pasted image 20221020145118.png]]
+
+Podział wtryskarek ze względu na zespoły funkcjonalne:
+
+* Wtryskarki tłokowe - używane historycznie, obecnie tylko małe wtryskarki laboratoryjne. Wycofywane z powodu wysokich strat ciśnienia, słabego wymieszania i jednorodności tworzywa, niedokładnego dozowania, nieprzetwarzanie tworzyw czułych termicznie, problemy z ogrzewaniem cięższych wkładów. 
+![[Pasted image 20221020150916.png]]
+* Wtryskarki ze wstępnym uplastycznianiem - dodatkowy cylinder ze ślimakiem do uplastyczniania materiału. (wtrysk dalej osiągany tłokiem) droższe od standardowych. Dla zastosowań wysokociśnieniowych i do szybkiego wtryskiwania
+![[Pasted image 20221020150943.png]]
+* Wtryskarki ślimakowe - powszechne, tworzywo uplastyczniane przez ślimak, ale wtryskiwanie odbywa się pod wpływem przesuwu polimeru powodowanego przez siłownik hydrauliczny lub silnik elektryczny. Ponadto ślimak obracając się tworzy gromadzi tworzywo przed czołem i gdy dojdzie do ściany, przesuwa się do tyłu pod naciskiem zgromadzonego w przodu materiału. Stosowane są ślimaki trójfazowe, w których wyróżniamy strefy zasilania, sprężania i dozowania.
+
+Zespół zamykania i otwierania formy 
+
+Systemy napędowe zespołu:
+* napęd kolanowo-dźwigniowy - generuje problemy z domknięciem formy
+* napęd bezpośrednio hydrauliczny -zespół siłowników o małej i dużej średnicy, działa wolniej niż k-d
+* hybrydowy - łączy zalety obu powyższych - najpierw szybko zamykamy k-d, a potem dociskamy b.h.
+
+Zespół napędu wtryskarki:
+
+* prawie zawsze hydrauliczny
+* pneumatyczny tylko w bardzo małych wtryskarkach
+*  eksperymentuje się z napędem bezpośrednio elektrycznym -serwomotory (na razie drogie)
+
+Zespół regulacji i sterowania
+* zawsz komputerowy
+* historycznie (do ~1970) - system stycznikowy (cokolwiek to znaczy)
+
+Korpusy o układzie
+* pionowym
+* poziomym
+* skośnym
+
+Specjalne typy wtryskarek:
+
+* wspomagane gazem obojętnym
+* z doprasowaniem
+* z rozdmuchiwaniem
+* do tworzyw termoutwardzalnych i gumy
+* do żywic i kauczuków utwardzalnych
+
+### Zjawiska zachodzące w formie w czasie wtryskiwania 
+
+Efekt fontannowy płynięcia
+
+![[Pasted image 20221020160500.png]]
+
+Wycinek jakiegoś szalonego schematu
+
+![[Pasted image 20221020161001.png]]
+
+
+
