--- a/2 Wtorek/4 Materiały węglowe/MW 18.10.22.md
+++ b/2 Wtorek/4 Materiały węglowe/MW 18.10.22.md
@@ -90,28 +90,16 @@ Budowa
 
   
 
-### Rentgenowski badanai strukturalne (XRD) wgla i materiałów węglowych
-
-  
+### Rentgenowski badania strukturalne (XRD) węgla i materiałów węglowych
 
 To samo co na nanomateriałach
 
-  
-
 ![](https://i.ytimg.com/vi/7lQmShVDJww/sddefault.jpg)
-
-  
-
 Dla materiałów węglowych: na preparatach proszkowych metodą Debye'a-Scherrera
 
-  
+Zakres niskich kątów ugięcia dostarcza informacji o rozmieszczeniu i wymiarach porów
 
-Zakres niskich kątów ugięcia dostarcza informacji o rozmieszczeniu i wymiarach prów
-
-  
-
-Zakres średnich kątó u... diana ma
-
-  
+Zakres średnich kątów ugięcia dostarcza informacji o stopniu upakowania warstw węglowych w krystalicie
+Zakres wysokich kątów 
 
 ![](https://scontent.xx.fbcdn.net/v/t1.15752-9/311489426_1300740730671550_7317358772973520468_n.jpg?stp=dst-jpg_s206x206&_nc_cat=103&ccb=1-7&_nc_sid=aee45a&_nc_ohc=pJUA5SWZ40IAX8iOX5D&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_AdSZXP1ejFCqv5jl1K53jRBZtjvPaw2PaUD7JaNueehOAA&oe=6373C3C1)
