--- a/5 Piątek/3 Kompozyty - laboratorium/K3.md
+++ b/5 Piątek/3 Kompozyty - laboratorium/K3.md
@@ -1,15 +1,15 @@
-### Instrukcja
+## Instrukcja
 
 [Instrukcja](https://drive.google.com/file/d/1zQQ2cr3J3AGj9wmj5ig3sggbXhkFyMLF/view?usp=sharing)
 
-### Zagadnienia
+## Zagadnienia
 
 * Udarność
 * Twardość
 * Wytrzymałość na rozciąganie
 * wzmocnienie różnokierunkowe
 
-### Opracowanie
+## Opracowanie
 
 Udarność + twardość + wytrzymałość na rozciąganie-> instrukcja
 
@@ -17,3 +17,69 @@ Udarność wg Charpy'ego - Broniewski s. 84
 Twardość - Broniewski s. 99
 Wytrzymałość na rozciąganie - Broniewski s. 61
 Wzmocnienie różnokierunkowe - Królikowski s. 151
+
+### Udarność
+
+Udarność jest miarą kruchości materiałów, określaną przez pracę potrzebną do dynamicznego złamania próbki i odnoszoną do wielkości poprzecznego przekroju próbki. Jednostką udarności jest $kJ/m^2$.
+
+Młot Charpy'ego
+![[Pasted image 20221026230110.png]]
+
+Spadający młot łamię beleczkę, zużywając część energii a zebrana zabierakiem wskazówka zaznacza wartość wykonanej pracy.
+
+W metodzie Charp’ego należy przed pomiarem naciąć na beleczce karb zgodnie z normą. **W pomiarze udarności z karbem młot ma uderzyć w powierzchnię przeciwną do karbu** Należy zmierzyć szerokość i grubość próbki. **Grubość próbki liczy się od zagłębienia karbu.** Dla danego tworzywa (polistyren) należy wykonać od 8-10 pomiarów udarności. Pomiary w których próbka została złamana, ale obie części łączy jeszcze cienka błonka **liczą się również**.
+
+![[Pasted image 20221026231448.png]]
+
+Próbka standardowa typu Charpy wg normy ISO 179-1 powinna następujące wymiary:
+|Wymiar| wartość|
+|-|-|
+|długość (l)| 80,0 ±2 mm|
+|szerokość (b)| 10,0 ± 0,2 mm|
+|grubość (h)| 4,0 ±0,2 mm|
+
+![[Pasted image 20221026231519.png]]
+
+W połowie długości powinien znajdować się **karb w kształcie litery V o kącie 45±1°** ,głębokości 2 mm i promieniu zaokrąglenia jego dna 0,25 ± 0,05 mm.
+
+![[Pasted image 20221026231404.png]]
+
+Udarność z karbem oblicza się wg wzoru:
+$$ a_k=\frac{A_k}{b \cdot t_k} \cdot 10^3\ [\frac{kJ}{m^2}]$$
+gdzie: ak- udarność z karbem; b- szerokość próbki w [mm]; tk- grubość (wysokość) próbki pod karbem, [mm]; Ak- energia zużyta na złamanie próbki z karbem, [kJ].
+
+Wyróżniamy ponadto *udarność bez karbu* $a_n$, liczoną analogicznie ale z pełną grubością próbki, oraz udarność względną KZ - stosunek $a_k$ do $a_n$ wyrażony w procentach.
+
+Innymi metodami pomiaru udarności są: metoda Dynstat, metoda Izoda (ciekawostka: wynik podaje się w stopo-funtach na cal kwadratowy), rozciąganie udarowe, metody spadających ciężarków oraz udarowe metody badania folii.
+
+Udarności wybranych tworzyw sztucznych:
+
+|Polimer| Udarność bez karbu| Udarność z karbem $[\frac{kJ}{m^2}]$|
+|-|-|-|
+|HDPE|15|5|
+|**PP (izotak.)**|**25**|**5**|
+|PCV|50|4|
+|**Polistyren**|**18**|**2**|
+|Stal|500-1000|b.d.|
+
+### Twardość
+
+Pojęcie twardości w odniesieniu do tworzyw sztucznych określa się za pomocą oporu, jaki stawia materiał, gdy wciska się w jego powierzchnię pionowo odpowiedni wgłębnik, (w przypadku metali, stosując naciski tak wielkie, aby powstało odkształcenie trwałe). Jako wgłębnik stosuje się elementy o znormalizowanych kształtach, np. kulki, stożki lub piramidki.
+
+Metoda Brinella (metoda wciskania kulki) polega na wciskaniu w badane tworzywo stalowej kulki o polerowanej powierzchni o średnicy 5±0,05 mm. Po pewnym czasie ustala się stan równowagi pomiędzy powierzchnią odcisku a obciążeniem wywieranym przez wgłębiającą się kulkę. W takim stanie stosunek siły obciążającej do powierzchni odcisku wgniecionego w danym materiale określa jego twardość:
+
+$$H=\frac{obciążenie}{powierzchnia\ odcisku}=\frac{F_t}{A}\ [\frac{N}{mm^2}]$$
+![[Pasted image 20221026235815.png]]
+Próbkę należy ustawić na stoliku pomiarowym tak aby kulka znajdowała się na środku beleczki. Stolik przesuwa się za pomocą dźwigni, tak aby wskazówka głębokości odcisku wskazywała wartość 0. Następnie należy zadać obciążenie i po 30 s odczytać wartość głębokości odcisku. W zależności od wielkości zadanego obciążenia należy odjąć od wyniku poprawkę **(związaną z odkształceniem ramy przyrządu pomiarowego)** oraz odczytać z tabeli dołączonej do stanowiska, twardość tworzywa w zależności od głębokości odcisku. W przypadku gdy odczytana po 30 s wartość głębokości odcisku nie mieści się w zakresie wartości opisanych w tabeli, należy zwiększyć/ zmniejszyć obciążenie. Należy zbadać co najmniej trzy próbki. Grubość próbki powinna wynosić co najmniej 4 mm. Wielkość próbki powinna być wystarczająca do wykonywania pomiarów co najmniej 5 mm od krawędzi próbki. Badana powierzchnia powinna być gładka, równa, bez pęcherzy, rys i innych widocznych wad.
+
+![[Pasted image 20221027000920.png]]
+
+Liczne tworzywa sztuczne odznaczają się zbyt szybkim powrotem poodkształceniowym, aby móc zmierzyć średnicą po zdjęciu obciążenia. Dlatego przy wyznaczaniu twardości tych tworzyw głębokość $h$ mierzymy przy trwającym obciążeniu a za powierzchnię odcisku przyjmujemy $A=\pi D h$, oznaczenia jak na rysunku powyżej.
+
+Odcisk powstający pod wpływem wybranego obciążenia jest sumą odkształceń plastycznego i sprężystego, które w tworzywach sztucznych mogą być większe niż u wielu metali. Po zdjęciu obciążenia następuje szybki powrót poodkształceniowy odcisku w zakresie odkształcenia sprężystego.
+
+![[Pasted image 20221027001259.png]]
+
+Przy założonym z góry czasie od zdjęcia obciążenia stosunek $\frac{h-h_0}{h_0}$ określa w pewnej mierze właściwości eksploatacyjne i elastoplastyczne. Możne być wykorzystany jako dodatkowa charakterystyka lub przybliżony wyznacznik modułu sprężystości. 
+
+Dla tworzyw o module sprężystości większym niż 2500 MPa można przyjąć, że doraźna wytrzymałość na rozciąganie stanowi w przybliżeniu $35 \pm 10\%$  twardości. Pomiar wytrzymałości jest kłopotliwy i pracochłonny (specjalne próbki). Można go wykonać raz obok pomiaru twardości i wyznaczyć współczynnik $X=\frac{R_t}{H}$. Potem z tego współczynnika można wyznaczyć wytrzymałość mierząc już wyłącznie twardość pozostałych próbek materiału. 
