--- a/5 Piątek/3 Kompozyty - laboratorium/K3.md
+++ b/5 Piątek/3 Kompozyty - laboratorium/K3.md
@@ -4,9 +4,9 @@
 
 ## Zagadnienia
 
-* Udarność
-* Twardość
-* Wytrzymałość na rozciąganie
+* udarność
+* twardość
+* wytrzymałość na rozciąganie
 * wzmocnienie różnokierunkowe
 
 ## Opracowanie
@@ -32,6 +32,7 @@ W metodzie Charp’ego należy przed pomiarem naciąć na beleczce karb zgodnie 
 ![[Pasted image 20221026231448.png]]
 
 Próbka standardowa typu Charpy wg normy ISO 179-1 powinna następujące wymiary:
+
 |Wymiar| wartość|
 |-|-|
 |długość (l)| 80,0 ±2 mm|
@@ -83,3 +84,83 @@ Odcisk powstający pod wpływem wybranego obciążenia jest sumą odkształceń 
 Przy założonym z góry czasie od zdjęcia obciążenia stosunek $\frac{h-h_0}{h_0}$ określa w pewnej mierze właściwości eksploatacyjne i elastoplastyczne. Możne być wykorzystany jako dodatkowa charakterystyka lub przybliżony wyznacznik modułu sprężystości. 
 
 Dla tworzyw o module sprężystości większym niż 2500 MPa można przyjąć, że doraźna wytrzymałość na rozciąganie stanowi w przybliżeniu $35 \pm 10\%$  twardości. Pomiar wytrzymałości jest kłopotliwy i pracochłonny (specjalne próbki). Można go wykonać raz obok pomiaru twardości i wyznaczyć współczynnik $X=\frac{R_t}{H}$. Potem z tego współczynnika można wyznaczyć wytrzymałość mierząc już wyłącznie twardość pozostałych próbek materiału. 
+
+### Wytrzymałość na rozciąganie
+
+Próba rozciągania polega na jednoosiowym odkształceniu próbek i zmierzeniu powstających sił. 
+
+Podstawowymi wielkościami mierzonymi podczas próby rozciągania są odkształcenia (wydłużenia ε) oraz siły odkształcające.
+
+Wydłużenie bezwzględne:
+$$\Delta l_x=l_x-l_0\ [mm]$$
+gdzie, $l_0$ - początkowa długość odcinka pomiarowego, $l_x$ - końcowa długość o. p.
+
+Wydłużenie względne to stosunek odkształcenia bezwzględnego do początkowej długości odcinka pomiarowego
+$$\varepsilon = \frac{\Delta l_x}{l_0}\ [\%]$$
+Naprężenie $\sigma$ definiuje się jako stosunek siły odkształcającej do początkowej powierzchni przekroju poprzecznego rozciąganej próbki, zmierzonej przed przyłożeniem obciążenia:
+$$\sigma = \frac{F}{A_0}\ [\frac{N}{m^2}, Pa, MPa]$$
+gdzie $F$ - siła odkształcająca, $A_0$ - powierzchnia początkowego przekroju poprzecznego
+
+W miarę wzrostu odkształcenia maleje powierzchnia poprzecznego przekroju próbki, dlatego też naprężenia wyznaczone na podstawie powyższego wzoru mają **charakter umowny** i nie są tożsame z rzeczywistymi naprężeniami powstającymi w próbce podczas rozciągania. Dla małych odkształceń zaniedbanie to jest nieistotne.
+
+Wytrzymałość na rozciąganie jest maksymalnym naprężeniem jakie materiał przenosi podczas rozciągania:
+$$R_r=\frac{F_r}{A_0}$$
+gdzie $F_r$ - maksymalna siła odkształcająca, $A_0$ - powierzchnia początkowego przekroju poprzecznego (dla próbek o przekroju prostokątnym $A_0=a\cdot b$)
+
+Na wyniki badań wpływ mają:
+
+- sposób przygotowania próbek (defekty strukturalne)
+- kształt i wielkość próbek
+- temperatura i względna wilgotność otoczenia
+- czas trwania próby (szybkość odkształcania lub szybkość wzrostu naprężenia)
+
+Najpełniejszą charakterystykę rozciągania tworzyw daję wykres rozciągania, ilustrujący zależność $\sigma = f ( \varepsilon )$ 
+
+![[Pasted image 20221027133046.png]]
+
+Parametry na wykresie rozciągania:
+
+|parametr| oznaczenie na wykresie|
+|-|-|
+|granica proporcjonalności| $\sigma_1$|
+|(umowna) granica plastyczności| $\sigma_2$|
+|wydłużenie względne na granicy plastyczności| $\varepsilon_2$|
+|doraźna wytrzymałość na rozciąganie|$\sigma_3$|
+|naprężenie zrywające|$\sigma_4$|
+|wydłużenie względne przy zerwaniu| $\varepsilon_4$|
+
+
+Zaciskanie próbki w uchwytach zrywarki lub maszyny wytrzymałościowej powoduje z reguły drobne uszkodzenia powierzchniowej warstwy tworzywa. Doprowadza to do rozerwania w tych właśnie uszkodzonych miejscach, a wyniki są obarczone znacznymi błędami. W przypadku pomiarów próbek wiosełkowych, uszkodzenie spowodowane szczękami zrywarki nie mają wpływu na wyniki. Zniszczenie próbki następuję z reguły w środkowej, przewężonej części belki, gdzie przekrój jest najmniejszy a naprężenia największe.
+
+### Wzmocnienie różnokierunkowe
+
+W wyrobach kompozytowych włókna wzmacniające mogą być ułożone w różnych kierunkach. 
+
+![[Pasted image 20221027140213.png]]
+Kompozyt z włóknami poprzecznymi ma wytrzymałość mniejszą niż wytrzymałość samego polimeru stanowiącego matrycę. Zachodzi w nich zjawisko przeciążenia matrycy polimerowej między włóknami. 
+Na odległość między środkami włókien składa się część odkształcalna - polimer - oraz nieodkształcalna - włókna. Nieodkształcalne włókna poprzeczne działają jak wtrącenia obce, nieprzenoszące naprężeń. Naprężenie matrycy polimerowej między włóknami poprzecznymi jest największe w linii łączącej środku włókien. Odkształcenie matrycy polimerowej w pasmach poprzecznego wzmocnienia jest kilkakrotnie większe od średniego odkształcenia kompozytu. Po przekroczeniu pewnego odkształcenia krytycznego w pasmach powstają mikropęknięcia dwóch typów:
+
+1. Odseparowanie włókien, en.debonding - adhezja polimer-włókno jest **mniejsza** niż kohezja polimeru. Mikropęknięcia powstają na granicy dwóch składników
+2. Mikropęknięcia wewnątrz matrycy polimerowej - adhezja jest równa lub większa niż kohezja. Pęka polimer między włóknami poprzecznymi.
+
+Zwykle jako pierwsze występują pęknięcia typu 1. 
+
+Aby zapobiegać pęknięciom typu 2. dąży się do stosowania polimerów o dużym (ponad 3%) wydłużeniu przy zerwaniu, przy czym nie należy znacznie obniżać modułu sprężystości.
+
+Aby zapobiegać pęknięciom typu 1. należy dążyć do jak najlepszej adhezji polimerów do włókien.
+
+W kompozytach o włóknach znajdujących się pod różnymi kątami do osi obciążeń obserwuje się występowanie załamania zwanego "kolanem" w krzywej rozciągania $\sigma = f ( \varepsilon )$.
+![[Pasted image 20221027144545.png]]
+Kompozyt wykazuje dwie wartości modułu sprężystości. Przed kolanem moduł jest większy, a więc mniejsze jest odkształcenie co daje lepsze wzmocnienie. Po przekroczeniu "kolana" powstają mikropęknięcia matrycy lub warstwy granicznej moduł i efekt wzmocnienia maleją.
+
+Ortotropia - podtyp anizotropii, występowanie w materiałach różnych właściwości w kierunkach do siebie prostopadłych.
+
+Typowymi wzmocnieniami ortotropowymi są tkaniny zrównoważone w układzie $0^o-90^o$. W tkaninach występuje, zależne od typu splotu, sfalowanie, komplikujące współpracę składników kompozytu.
+
+Największe sfalowanie występuje w tkaninach o splocie płóciennym, gęstym, o dużej gramaturze.
+
+Podczas rozciągania sfalowanie prowadzi do powstania momentów skręcających, wzrostu grubości warstw kompozytu i w konsekwencji do zjawisk delaminacji międzywarstwowej. 
+
+![[Pasted image 20221027150250.png]]
+
+W celu uniknięcia opisanych powyżej problemów stosuje się tkaniny o splocie płóciennym z włókien **spłaszczonych**
