--- a/5 Piątek/3 Kompozyty - laboratorium/K4.md
+++ b/5 Piątek/3 Kompozyty - laboratorium/K4.md
@@ -1,12 +1,40 @@
-### Instrukcja
+## Instrukcja
 
 [Instrukcja](https://drive.google.com/file/d/1zgSHUHo18icaLfeqEEDb4pl71S-P2-Cv/view?usp=sharing)
 
-### Zagadnienia
+## Zagadnienia
 
 * Laminowanie
-    * ręczne natryskowe
+    * ręczne 
+    * natryskowe
     * z zastosowaniem elastycznego worka
 * infuzja
 
-### Opracowanie
+## Opracowanie
+
+### Laminowanie ręczne
+
+prosta metoda oparta na najczęściej drewnianej lub polimerowej formie wytwarzania kompozytu. Wytwarza się nią wyroby typu skorupowego - tzw. laminaty
+
+Przebieg procesu:
+
+1. wyczyszczenie, wypolerowanie formy
+2. natrysk warstwy rozdzielającej - antyadhezyjnej (np. r-r wodny poli(alkoholu winylowego) - PVAL)
+3. pierwsza warstwa żywicy - żywica żelkotowa (en.gel coat), odpowiedzialna za kolor, wygląd
+4. kolejne warstwy mat i tkanin przesyconych żywicą
+
+Zastosowanie - niewielkie liczby dużych, skomplikowanych wyrobów - duże elementy skorupowe, naprawa takich elementów, również formy dla innych laminatów. Nie wolno stosować do elementów od których zależy bezpieczeństwo (np. w lotnictwie)
+
+Wady:
+
+- ogromny nakład pracy
+- brak możliwości dokładnego zapewnienia orientacji włókien
+`nieścisłość w książce - albo powyższy brak możliwośći odnosi się do kompoztów, w których zawarość włókien nie przekracza 50%, albo kompozyty przygotowane poprzez laminowanie ogólnie nie mogą zawierać więcej niż 50% włókien co stanowi ich kolejną wadę`
+- duży wpływ czynnika ludzkiego 
+
+Zalety:
+
+- nie wymaga drogiego oprzyrządowania
+- prostota
+
+Królikowski 194-205
