--- a/5 Piątek/3 Kompozyty - laboratorium/K4.md
+++ b/5 Piątek/3 Kompozyty - laboratorium/K4.md
@@ -12,18 +12,31 @@
 
 ## Opracowanie
 
-### Laminowanie ręczne
+### Laminowanie ręczne (kontaktowe)
 
-prosta metoda oparta na najczęściej drewnianej lub polimerowej formie wytwarzania kompozytu. Wytwarza się nią wyroby typu skorupowego - tzw. laminaty
+prosta metoda wytwarzania kompozytu oparta na formie, najczęściej drewnianej, polimerowej lub z wykonanego wcześniej innego laminatu. Wytwarza się nią wyroby typu skorupowego - tzw. laminaty. Składnikami są najczęściej żywice poliestrowe i wzmocnienia szklane.
 
 Przebieg procesu:
 
-1. wyczyszczenie, wypolerowanie formy
-2. natrysk warstwy rozdzielającej - antyadhezyjnej (np. r-r wodny poli(alkoholu winylowego) - PVAL)
-3. pierwsza warstwa żywicy - żywica żelkotowa (en.gel coat), odpowiedzialna za kolor, wygląd
-4. kolejne warstwy mat i tkanin przesyconych żywicą
+1. przygotowanie formy (wytworzenie formy z modelu, wygładzenie i wypolerowanie, jeśli forma z laminatu - usztywnienie, dogrzanie)
+2. pokrycie warstwą rozdzielającą - antyadhezyjną (np. r-r wodny poli(alkoholu winylowego) - PVAL lub wosk z dodatkiem silikonu )
+3. pierwsza warstwa żywicy - żywica żelkotowa (en.gel coat), odpowiedzialna za kolor, wygląd, nie powinna być grubsza niż 0.3 mm.
+4. kolejne warstwy mat lub tkanin przesyconych żywicą
+5. pokrycie ciekną warstwą żywicy (en.top coat) zapobiegającej parowaniu i negatywnemu działaniu powietrza, spowalniającego utwardzanie.
+6. Odczekanie na utwardzenie laminatu - ok. 3h.
+7. obcięcie naddatku brzegowego i wykończenie wyrobu
 
-Zastosowanie - niewielkie liczby dużych, skomplikowanych wyrobów - duże elementy skorupowe, naprawa takich elementów, również formy dla innych laminatów. Nie wolno stosować do elementów od których zależy bezpieczeństwo (np. w lotnictwie)
+Przesycanie warstwy wzmocnienia żywicą powinno odbywać się od dołu, aby powietrze było wypychane przez żywicę i nie tworzyło pęcherzyków w laminacie. Dlatego **najpierw nanosi się żywicę, na którą układa się warstwę wzmocnienia**.
+
+![[Pasted image 20221103124523.png]]
+
+Zastosowanie - niewielkie liczby dużych, skomplikowanych wyrobów - duże elementy skorupowe, naprawa takich elementów, również formy dla innych laminatów. 
+
+- łodzie
+- obudowy maszyn
+- pojemniki
+
+Nie wolno stosować do elementów od których zależy bezpieczeństwo (np. w lotnictwie)
 
 Wady:
 
@@ -34,7 +47,26 @@ Wady:
 
 Zalety:
 
-- nie wymaga drogiego oprzyrządowania
+- nie wymaga drogiego oprzyrządowania (niskie koszty inwestycyjne)
 - prostota
 
-Królikowski 194-205
+### Laminowanie natryskowe
+![[Pasted image 20221103130349.png]]
+
+Równoczesny natrysk na powierzchnię formy ciętego rovingu i żywicy przy pomocy pistoletu i sprężonego powietrza. Dwie dyszę tryskają dwoma rodzajami żywicy a trzecie dostarcza pociętego rovingu. Natryśnięty kompozyt wałkuje się wałkami zagęszczającymi. 
+
+Zalety:
+
+- najtańsza forma wzmocnienia (roving `[nie wiem co z tego że "roving"]`)
+- zmniejszenie robocizny
+- skrócenie cyklu laminowania
+
+Wady:
+
+- trudność w określeniu grubości laminatu
+- złe warunki BHP (potrzebne maski i wentylacja)
+- koszt zakupu urządzeń natryskowych
+
+### Laminowanie z zastosowaniem elastycznego worka
+
+![[Pasted image 20221103132311.png]]
