--- a/5 Piątek/3 Kompozyty - laboratorium/K5.md
+++ b/5 Piątek/3 Kompozyty - laboratorium/K5.md
@@ -8,9 +8,9 @@
 * Mechanizm utwardzania żywic epoksydowych
 * Odlewanie
 * Formowanie negatywowe
-* uelastycznianie żywic epoksydowych
-* właściwości kompozycji epoksydowych
-* właściwości utwardzonej żywicy lanej
+* uelastycznianie żywic epoksydowych @czub, s. 234 
+* właściwości kompozycji epoksydowych @czub, s.288
+* właściwości utwardzonej żywicy lanej @czub, s. 295
 
 ## Opracowanie
 ### Budowa żywic epoksydowych
@@ -83,8 +83,91 @@ Inne metody utwardzania:
 
 Odlewaniem nazywa się szereg procesów polegających na odwzorowaniu przestrzeni roboczej formy, przez wypełnienie jej ciekłym, bądź uplastycznionym materiałem polimerowym. Proces prowadzony jest w warunkach ciśnienia atmosferycznego lub pod ciśnieniem roboczym nieprzekraczającym 0.2 MPa.
 
+![[Pasted image 20221103212456.png]]
+
 Stosowane materiały charakteryzują się:
 
 - niską lepkością 
 - małą szybkością ścinania
 - niewielkim naprężeniem powierzchniowym
+
+Zalety:
+
+- niskie koszty wykonania form (proces bezciśnieniowy - niskie wymagania)
+- brak skomplikowanych maszyn i urządzeń
+- rentowność produkcji małoseryjnej 
+- bezkierunkowa struktura odlewu i izotropowe własności wyrobu
+
+Wady:
+
+- niebezpieczeństwo powstania pułapek powietrznych i jam w wyrobie
+- konieczność zapewnienia odbioru ciepła z formy przy przetwarzaniu materiałów sieciujących 
+- długi czas cyklu produkcyjnego (w porównaniu do wtryskiwania)
+
+Formy:
+
+![[Pasted image 20221103211949.png]]
+
+Zmienne procesowe:
+
+- kinematyka napełniania gniazda formującego - np. wlew tworzywa na pionową ściankę odlewu, cienki i ciągłym strumieniem w celu uniknięcia zapowietrzenia odlewu
+- temperatura formy - np. wyroby odlewane w formach ogrzanych postrzegane są jako lepsze jakościowo - wolne od naprężeń odlewniczych i wad powierzchni. 
+- czas chłodzenia odlewu - musi być optimum względem wydajności procesu (chcemy żeby był krótki) a eliminacją naprężeń wewnętrznych (chcemy żeby był długi) 
+
+### Formowanie negatywowe
+
+![[Pasted image 20221103213809.png]]
+
+Pocienienie foli w wybranych miejscach:
+
+![[Pasted image 20221103213914.png]]
+
+![[Pasted image 20221103213936.png]]
+
+![[Pasted image 20221103213950.png]]
+
+Wniosek - im późniejsze zetknięcie odkształcanej płyty ze ścianką formy tym większe pocienienie.
+
+H/D - współczynnik głębokości formowania , optymalna wartość $\leq 0.4$
+
+Gdy H/D>0.5, stosuje się mechaniczne rozciąganie:
+
+![[Pasted image 20221103214806.png]]
+
+Następuje mniejsze niż w przypadku podstawowego termoformowania zróżnicowanie grubości ścianki wyrobu.
+
+![[Pasted image 20221103221611.png]]![[Pasted image 20221103221643.png]]
+
+Powyższa metoda służy do głębokiego formowania przedmiotów i pozwala na otrzymanie ścianek o prawie jednakowej grubości, dzięki równomiernemu odkształcaniu podczas wydmuchiwania oraz kształtowaniu bezdotykowemu - powietrze jako środek smarny oraz izolacja termiczna. 
+
+### Uelastycznianie żywic epoksydowych
+
+Utwardzone żywice epoksydowe:
+
+|Temperatura pokojowa| 70 -280$^oC$ (zależnie od żywicy lub utwardzacza)|
+|-|-|
+|stan szklisty| stan wysokoelastyczny|
+|sztywne, kruche, duży moduł E, małe wydłużenie względne przy zerwaniu, niewielka udarność| elastyczne, przypomina twardą gumę|
+
+Generacja naprężeń wewnętrznych:
+
+- szybkie lub cykliczne zmiany temperatury
+- łączenie żywic z innymi tworzywami
+- chemiczny skurcz utwardzania
+
+Naprężenie sumaryczne = moduł sprężystości utwardzonej żywicy $\times$ \[chemiczny skurcz utwardzania + (różnica współczynników rozszerzalności cieplnej żywicy i zalanych ją materiałów) $\times$ (różnica temperatury zeszklenia i pracy tworzywa)]
+
+$$r=E[\varepsilon_R + (\alpha_Ż - \alpha_M )(T_g-t)]$$
+Wartości $\varepsilon_R$ oraz $(\alpha_Ż - \alpha_M )$ można zmniejszać przez dodanie napełniaczy.
+
+Metody uelastyczniania:
+
+- dodanie napełniaczy
+- obniżanie temperatury zeszklenia
+- dodanie związków uelastyczniających
+	- związki z długimi łańcuchami alifatycznymi i ewentualnymi wiązaniami eterowymi
+	- plastyfikacja zewnętrzna - brak związania chemicznego, np. ftalan dibutylowy
+	- plastyfikacja wewnętrzna - chemicznie wbudowane w sieć przestrzenną
+
+### Właściwości kompozycji epoksydowych
+
