--- a/5 Piątek/3 Kompozyty - laboratorium/K1.md
+++ b/5 Piątek/3 Kompozyty - laboratorium/K1.md
@@ -282,7 +282,7 @@ Można wyróżnić trzy rodzaje struktury PP:
 
 * izotaktyczną - grupy metylowe przy asymetrycznym atomie węgla znajdują się po tej samej stronie łańcucha
 * syndiotaktyczną - gr. met. przy a.a.w. występują naprzemian po jedenj i po drugiej stronie łańcucha
-* antytaktyczną - przypadkowe rozmieszczenie grup metylowych
+* ataktyczną - przypadkowe rozmieszczenie grup metylowych
 
 ![](https://i.imgur.com/9yPoRq1.png)
 
