--- a/5 Piątek/3 Kompozyty - laboratorium/K1.md
+++ b/5 Piątek/3 Kompozyty - laboratorium/K1.md
@@ -4,18 +4,18 @@
 
 ## Zagadnienia
 
-- [x] Kompatybilizator 
-- [x] Mechanizm kompatybilizacji
-- [x] Napełniacze i włókna wzmacniające 
-    - [x] szklane
-    - [x] preparacje powierzchniowe
-    - [x] roving
-    - [x] tkaniny
-    - [x] węglowe
-    - [x] roślinne
-    - [x] aramidowe
-- [x] polipropylen
-- [x] walcowanie
+- Kompatybilizator 
+- Mechanizm kompatybilizacji
+- Napełniacze i włókna wzmacniające 
+    - szklane
+    - preparacje powierzchniowe
+    - roving
+    - tkaniny
+    - węglowe
+    - roślinne
+    - aramidowe
+- polipropylen
+- walcowanie
 
 ## Opracowanie
 
