--- a/5 Piątek/3 Kompozyty - laboratorium/K4.md
+++ b/5 Piątek/3 Kompozyty - laboratorium/K4.md
@@ -70,3 +70,28 @@ Wady:
 ### Laminowanie z zastosowaniem elastycznego worka
 
 ![[Pasted image 20221103132311.png]]
+
+Przebieg procesu:
+
+1. Formowanie laminatu metodą laminowania ręcznego
+2. Nałożenie i zamocowanie elastycznego worka
+3. Odessanie powietrza i nadmiaru żywicy
+4. Odczekanie na utwardzenie
+
+Zalety:
+
+- brak pęcherzy powietrza
+- wyższa zawartość wzmocnienia (odessaliśmy nadmiar żywicy)
+- utwardzenie bez dostępu tlenu, który je inhibituje
+- brak możliwości odparowywania styrenu
+
+Materiał na worek próżniowy:
+
+- kształt zbliżony do wyrobu
+- chemicznie odporny na styren
+
+Przykłady:
+
+- folia poliamidowa PA6 
+
+W celu zwiększenia zawartości wzmocnienia poprzez zwiększenie ciśnienia formowania, worek może być zamknięty od góry sztywną płytą z przewodem do wtłaczania sprężonego powietrza w powstałą przestrzeń nad workiem.
