--- a/5 Piątek/3 Kompozyty - laboratorium/K4.md
+++ b/5 Piątek/3 Kompozyty - laboratorium/K4.md
@@ -57,7 +57,7 @@ Równoczesny natrysk na powierzchnię formy ciętego rovingu i żywicy przy pomo
 
 Zalety:
 
-- najtańsza forma wzmocnienia (roving `[nie wiem co z tego że "roving"]`)
+- najtańsza forma wzmocnienia (roving)
 - zmniejszenie robocizny
 - skrócenie cyklu laminowania
 
@@ -85,13 +85,64 @@ Zalety:
 - utwardzenie bez dostępu tlenu, który je inhibituje
 - brak możliwości odparowywania styrenu
 
+Wady:
+
+- w kompozytach przekładkowych (sandwiczach) nie można korzystać z rdzeni lekkich typu "plaster miodu" - mogły by się zniszczyć przez nacisk zewnętrznego ciśnienia po podłączeniu próżni
+
 Materiał na worek próżniowy:
 
 - kształt zbliżony do wyrobu
 - chemicznie odporny na styren
 
-Przykłady:
-
-- folia poliamidowa PA6 
+Przykład - folia poliamidowa PA6 
 
 W celu zwiększenia zawartości wzmocnienia poprzez zwiększenie ciśnienia formowania, worek może być zamknięty od góry sztywną płytą z przewodem do wtłaczania sprężonego powietrza w powstałą przestrzeń nad workiem.
+
+W omawianej metodzie stosowane są dodatkowe warstwowe materiały specjalne:
+
+- en.peel play - wierzchnia cienka warstwa, usuwana po utwardzeniu. Zapewnia czystość lub żądaną teksturę powierzchni. Np. cienkie tkaniny poliamidowe lub poliestrowe.
+- folia rozdzielająca (antyadhezyjna, en.release film) - zapobiega przywieraniu. Np. folie z polipropylenu.
+- samoprzylepne cienkie tkaniny antyadhezyjne powleczone teflonem z klejem silikonowym - do antyadhezyjnego pokrycia powierzchni form
+- warstwa odpowietrzająco-przesączalna i rozprowadzająca - pozwalają na równomierny rozkład próżni nad układem wzmocnień formowanego kompozytu oraz na adsorpcje i odprowadzenie nadmiaru żywicy z laminatu.  Włóknina lub filc z ciętych włókien poliestrowych/poliolefinowych. Dodatkowo może występować siatka rozprowadzająca równomiernie żywicę.
+
+Istnieje wariacja powyższej metody, w której zamiast płynnej żywicy używamy żywicy (wyłącznie epoksydowej) w formie folii. Przekładamy warstwy wzmocnienia warstwami folii, nakładamy worek, podłączamy próżnie i ogrzewamy. Folia się upłynnia, żywica przesiąka przez wzmocnienie i utwardza się i voilà!
+
+### Formowanie infuzyjne
+Istnieje szereg rozwiązań opartych o dwie sztywne połówki form, gdzie umieszczamy wzmocnienia i zasysamy (wprowadzamy pod próżnią) lub pompujemy (wprowadzamy pod ciśnieniem) żywicę.
+
+Zastosowania infuzji:
+
+- karoserie samochodowe
+- kadłuby jachtów i motorówek
+- pudła wagonów kolejowych
+
+Formowanie infuzyjne pod próżnią
+![[Pasted image 20221117233454.png]]
+Metoda RTM - en.resin transfer moulding
+
+Classic RTM - lepsze parametry, wyższy koszt form
+Light RTM - gorsze parametry, tańsze formy, niższe ciśnienie wtłaczania żywicy
+
+![[Pasted image 20221117234823.png]]
+
+Zalety:
+
+- bardzo dobra (sic! chyba dobra = wysoka) tolerancja wymiarowa wyrobów (Classic)
+- powierzchnia wyrobów jest klasy A (gładka)
+- zawartość wzmocnienia może osiągnąć do 60% (Classic)
+
+Wady:
+
+- wysoki koszt form (metoda klasyczna)
+
+W procesach infuzyjnych:
+
+- lepkość żywicy powinna być mała
+- dla małej zwilżalności i przenikalności wzmocnienia muśmy stosować wysokie ciśnienia infuzji
+- dla duże zwilżalności i przenikalności wzmocnienia możemy stosować niższe ciśnienia infuzji
+
+Pozostałe warianty RTM:
+
+- A-RTM (Advanced)
+- Multiple insert touling RTM
+- Przesycanie infuzyjne z użyciem warstwy przenikalno-rozprowadzjącej (SCRIMP)
