--- a/1 Poniedziałek/1 Optyka materiałów/OM 22.11.21.md
+++ b/1 Poniedziałek/1 Optyka materiałów/OM 22.11.21.md
@@ -43,7 +43,7 @@ Wykorzystuje się w polaryzatorach Nicola, polaryzatorach Wollastona (beam split
 
 > Uwaga trudne słowa: półfalówka, ćwierćfalówka
 
-Interferencja - superpozycja 2 fal monochromatycznego o tej samej częstości i dobrze określonej fazie.  `Dużo mówił i miał wzory na folii, ale nie chciało mi się pisać. Trza się będzie upoewnić, że umiem`
+Interferencja - superpozycja 2 fal monochromatycznego o tej samej częstości i dobrze określonej fazie.  `Dużo mówił i miał wzory na folii, ale nie chciało mi się pisać. Trza się będzie upewnić, że umiem`
 
 Budowa interferometru Michelsona.
 
