--- a/2 Wtorek/4 Materiały węglowe/MW 22.10.18.md
+++ b/2 Wtorek/4 Materiały węglowe/MW 22.10.18.md
@@ -62,7 +62,7 @@ Mechanizm tworzenia mezofazy
 
 4. Powstawanie skupisk lamel aromatycznych o średnich masach cząsteczkowych ok 500 [u] (anizotropowe sfery mezofazy)
 
-5. Łączenie się (koalescencja) sfer mezofazy prowadzące do powstania rónych form anizotropii
+5. Łączenie się (koalescencja) sfer mezofazy prowadzące do powstania różnych form anizotropii
 
   
 
@@ -101,5 +101,3 @@ Zakres niskich kątów ugięcia dostarcza informacji o rozmieszczeniu i wymiarac
 
 Zakres średnich kątów ugięcia dostarcza informacji o stopniu upakowania warstw węglowych w krystalicie
 Zakres wysokich kątów 
-
-![](https://scontent.xx.fbcdn.net/v/t1.15752-9/311489426_1300740730671550_7317358772973520468_n.jpg?stp=dst-jpg_s206x206&_nc_cat=103&ccb=1-7&_nc_sid=aee45a&_nc_ohc=pJUA5SWZ40IAX8iOX5D&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_AdSZXP1ejFCqv5jl1K53jRBZtjvPaw2PaUD7JaNueehOAA&oe=6373C3C1)
