--- a/1 Poniedziałek/1 Optyka materiałów/OM 22.11.28.md
+++ b/1 Poniedziałek/1 Optyka materiałów/OM 22.11.28.md
@@ -15,6 +15,7 @@ Zastosowania:
 - "suszarki" policji
 - dalmierze
 - wojsko
+
 Budowa - dużo pitu pitu, emisja wymuszona, inwersja obsadzeń, sprzężenie zwrotne (fala stojąca - rezonator optyczny Fabry-Perot'a)
 
 
@@ -26,5 +27,5 @@ Unikalne właściwości światła laserowego:
 	- spójną w czasie i przestrzeni
 	- o bardzo małej rozbieżności
 
-Fala stojąca, wnęka laserowa, próg akcji laserowej, układy wielepoziomowe
+Fala stojąca, wnęka laserowa, próg akcji laserowej, układy wielopoziomowe
 
