--- a/1 Poniedziałek/3 Inżynieria chemiczna - wykład/IC 22.12.12.md
+++ b/1 Poniedziałek/3 Inżynieria chemiczna - wykład/IC 22.12.12.md
@@ -22,7 +22,7 @@ $m=2000 kg/h \cdot 2h=4000kg$
 $V_r=\frac{4000}{1020}=3.92m^3$
 $V_c=\frac{V_r}{\alpha}=5.60 m^3$
 
-$V_c=\frac{\pi D^2}{4}$
+$V_c=\frac{\pi D^2H}{4}$
 $\frac{H}{D}=4.1$
 D=1.2027m
 
