--- a/1 Poniedziałek/4 Recykling materiałów/RM 22.12.05.md
+++ b/1 Poniedziałek/4 Recykling materiałów/RM 22.12.05.md
@@ -85,7 +85,7 @@ Podatność na rozkład
 |węglowodnay, cukry| celuloza| ligninia|
 
 
-Warunki prowadzenia procesu: `pyanie na kolosa`
+Warunki prowadzenia procesu: `pytanie na kolosa`
 
 - liczna i rodzaj mikroorganizmów
 - stężenie tlenu 
