--- a/1 Poniedziałek/3 Inżynieria chemiczna - wykład/IC 22.10.17.md
+++ b/1 Poniedziałek/3 Inżynieria chemiczna - wykład/IC 22.10.17.md
@@ -15,7 +15,7 @@ Stadia projektowania:
 * maksymalnie wykorzystujemy surowce
 * maksymalnie wykorzystujemy energię
 * maksymalnie wykorzystujemy aparaturę
-* zachowujmey umiar technologiczny (nie projektujemy "gigantów")
+* zachowujemy umiar technologiczny (nie projektujemy "gigantów")
 
 Zazwyczaj kilka mniejszych instalacji zużywa mniej energii niż jedna duża o tym samym przerobie
 
@@ -34,19 +34,19 @@ Zazwyczaj kilka mniejszych instalacji zużywa mniej energii niż jedna duża o t
     4. Bilas materiałowy
     5. Wskaźniki zużycia surowców
 5. Aparatura
-    1. Schemat technilogiczno - aparaturowy
-    2. Uzasadnienie dodboru aparatów i urządzeń
-    3. Specyfikacja podstawowoych apartów i urządzeń
-    4. Zestawienie rurociągów i aramtury
+    1. Schemat technologiczno-aparaturowy
+    2. Uzasadnienie doboru aparatów i urządzeń
+    3. Specyfikacja podstawowych aparatów i urządzeń
+    4. Zestawienie rurociągów i armatury
     5. Charakterystyka produkcji z punktu widzenia korozji i erozji
     6. Założenia konstrukcyjne dla aparatów i urządzeń wymagających indywidualnego konstruowania
     7. Koncepcja rozmieszczenia przestrzennego aparatury
 6. Kontrola procesu
     1. Kontrola technologiczna
-    2. Aparatura kontrolno - pomiarowa
+    2. Aparatura kontrolno-pomiarowa
 7. Czynniki energetyczne
     1. Bilans energetyczny
-    2. Zestawienie czynnikó energetycznych
+    2. Zestawienie czynników energetycznych
 8. Odpady i ścieki
 9. Zatrudnienie
 10. Ochrona i zabezpieczenie przeciwpożarowe
@@ -64,7 +64,7 @@ Projekt procesowy instalacji o działaniu *a* do otrzymywania *b* o zdolności p
 
 ### Wprowadzenie do PP
 
-We **wprowadzeniu** do PP muszą byćpodane:
+We **wprowadzeniu** do PP muszą być podane:
 
 1. Co otrzymujemy - produkt
 2. Co otrzymujemy dodatkowo - produkty uboczne
