--- a/2 Wtorek/4 Materiały węglowe/MW 22.10.04.md
+++ b/2 Wtorek/4 Materiały węglowe/MW 22.10.04.md
@@ -1,4 +1,5 @@
-`Jakieś narzekanie na stan nauki, pogoń za publikacjami, anegdoty`
+> Jakieś narzekanie na stan nauki, pogoń za publikacjami, anegdoty
+
 Dawne zastosowania węgla:
 
 * Zgazowywanie węgla (dalej rozwijane w RPA)
@@ -27,9 +28,7 @@ W produkcji grafitu wykorzystuje się koks.
 Zakłady węglowe - Racibórz, Nowy Sącz.
 
 ### Model struktury chemicznej węgla bitumicznego
-Model struktury węgla wg Wisera
-
-`Wielki schemat rozgałęzionej cząsteczki >100 atomów`
+Model struktury węgla wg Wisera - wielki schemat rozgałęzionej cząsteczki >100 atomów
 
 Budowa węgli kamiennych:
 
@@ -39,7 +38,7 @@ Budowa węgli kamiennych:
 * S ~1%
 * N ~1,5%
 
-Paka (?) węglowa - same pierścienie aromatyczne (chyba)
+Pak węglowy - same pierścienie aromatyczne (chyba)
 
 ### Materiały węglowe
 #### Konwencjonalne
@@ -58,14 +57,15 @@ Fulereny, nanorurki, grafen, nanocebulki, nanorożki, itd...
 * Diament (sp3)
 * Grafit (sp2)
 * Karbin (sp)
-* Fuleren (C60, sp2.28 [?])
+* Fuleren (C60, sp2.28 \[?\])
 
 `Rysunek struktury grafitu - ważny. warstwy sąsiednie przesunięte względem siebie`
+![[Pasted image 20230118135937.png]]
 
-Gęstość grafitu - ileśtam.
+Gęstość grafitu - 2.26 $g/cm^3$.
 Pomiędzy warstwami grafitu działają siły Van-der-Waalsa.
 
-*"Takie życie, w takim kraju żujemy" - o tym, że Polska nie jest potęgą grafenową*
+> *"Takie życie, w takim kraju żyjemy" - o tym, że Polska nie jest potęgą grafenową*
 
 ### Nieoczywiste hybrydyzacje
 
@@ -79,7 +79,7 @@ Mieszane stany atomów węgla (sp3+sp2+sp):
 * Włókna węglowe
 * Węgiel amorficzny - powstaje m.in. w procesach katalitycznych
 
-Pośrednie stany atomów węgla (spm, 1<m<3, $m \neq 2$)
+Pośrednie stany atomów węgla ($sp^m$, 1<m<3, $m \neq 2$)
 
 * Fulereny
 * Nanowłókna węglowe
@@ -88,11 +88,13 @@ Pośrednie stany atomów węgla (spm, 1<m<3, $m \neq 2$)
 ### Struktura heksagonalna grafitu
 
 `ponownie rysunek - ponowny przykaz przerysowania, ważne! odległość między warswtami 0.3354nm`
+
+![[Pasted image 20230118140100.png]]
 Struktura ABAB - stabilna dominująca
 Struktura ABCABC - metastabilna
 
 ### Właściwości alotropów węgla
-|Odmiana alotropowa|Długość wiązania [nm]|Gęstość [$g/cm^3$]|Temperatura sublimacji [$^oC$]|
+|Odmiana alotropowa| Długość wiązania [nm]|Gęstość [$g/cm^3$]|Temperatura sublimacji [$^oC$]|
 |-|-|-|-|
 |Diament|0.1545|3.52|-|
 |Grafit|0.1421, 0.3354|2.26|3650|
@@ -108,3 +110,4 @@ Struktura ABCABC - metastabilna
 |Oporność elektryczna|$m\Omega \cdot cm$|0.1|3000|
 
 ### Procesy termiczne - produkcja materiałów węglowych i grafitowych
+...
