--- a/2 Wtorek/4 Materiały węglowe/MW 22.10.25.md
+++ b/2 Wtorek/4 Materiały węglowe/MW 22.10.25.md
@@ -1,5 +1,7 @@
 `Porównanie dyfraktogramów dla grafitu (wąskie piki, pik 002 najwyższy) i koksu (wąski, najwyższy pik 002, pozostałe piki rozmyte; możemy wyróżnić mniej pików ale te które widzimy są zgodne z tymi z grafitu)
 
+![[Pasted image 20230118143752.png]]
+
 Z widma XRD oblicza się odległość między warstwami $d_{002}$ oraz wymiary domen w kierunku prostopadłym $L_c$ i równoległym $L_a$ do płaszczyzny warstw (odpowiednio wysokość i średnica krystalitów)
 `rysunek z oznaczeniami w zeszycie
 
@@ -14,7 +16,7 @@ $$L=k \lambda / \beta cos \theta$$ wzór Scherrera, k - współczynnik kształtu
 $$ g= \frac{0.344-d_{002}[nm]}{0.344-0.3354},\ 0\le g <1$$
 ($d_{002,\ grafitu}=0.3354$, $d_{002, węgla\ turbostatycznego}=0.344$)
 
-`kimnąłem się
+`kimnąłem się`
 
 Modele budowy materiałów węglowych wg Rosalind Franklin (1951)
 
@@ -25,8 +27,6 @@ Modele budowy materiałów węglowych wg Rosalind Franklin (1951)
 Materiały węglowe grafityzujące (np. koks pakowy i naftowy) - materiały zdolne do przemiany w grafit w wyniku obróbki termicznej w temperaturach do 3000$^oC$ pod ciśnieniem atmosferycznym lub obniżonym. Stosując dyfrakcję promieni rentgenowskich proces ogrzewania jest obserwowany jako stopniowa i jednorodna przemiana podczas ogrzewania w zakresie temperatur 1700-3000$^oC$
 
 Materiały węglowe niegrafityzujące (koks z węgla energetycznego, sadza) - materiały niezdolne do utworzenia struktury grafitu w procesie termicznym. Faza grafitowa może się tworzyć lokalnie w niewielkich ilościach w wyniku pojawiających się naprężeń termicznych.
-
-> sadza niegrafityzowana to kłamstwo
 
 Nietypowe zachowanie (antracyty, węgle pirolityczne). Podczas obróbki termicznej do temperatury ok. 2200$^oC$ zachowują się podobnie jak materiały węglowe niegrafityzujące. Podczas ogrzewania powyżej tej temperatury obserwuje się skokową przemianę w grafit.
 
