--- a/2 Wtorek/4 Materiały węglowe/MW 22.11.08.md
+++ b/2 Wtorek/4 Materiały węglowe/MW 22.11.08.md
@@ -9,7 +9,7 @@ Model grafityzacji wg Franklin
 
 > doskonała książka o węglach aktywnych: Harry Marsh, *Activated carbons* 
 
-`wykres (MW-4 w materiałach [po prawej])`
+`wykres (MW-4 w materiałach [po prawej]) - nie mam pojęcia, o który wykres mi tu chodziło`
 
 ## Węgle aktywne
 
@@ -75,7 +75,8 @@ Zastosowania węgli aktywnych:
 - odzyskiwanie rozpuszczalników
 - oczyszczanie powietrza
 
-`rysunek makropory-mezopory-mikropory (MW 7/8 [po prawej])`
+`rysunek makropory-mezopory-mikropory`
+![[Pasted image 20230118145108.png]]
 
 Produkcja przemysłowa węgli aktywnych
 
