--- a/2 Wtorek/4 Materiały węglowe/MW 22.11.29.md
+++ b/2 Wtorek/4 Materiały węglowe/MW 22.11.29.md
@@ -1,11 +1,12 @@
-`p.26 s.4`
+![[Pasted image 20230118145430.png]]
 
 Zastosowanie węgli aktywnych:
 
 - Adsorpcja z fazy gazowej
 	- usuwanie zanieczyszczeń występujących w niewielkich stężeniach lub jako końcowy etap wielostopniowego oczyszczania gazów:
 		- usuwanie węglowodorów ($C_2-C_4$) z gazu ziemnego
-reszta jak na `p.25 s.6`
+reszta jak poniżej
+![[Pasted image 20230118145513.png]]
 	- odzyskiwanie rozpuszczalników w przemyśle farb i lakierów
 	- usuwanie par rtęci z powietrza
 	- maski gazowe (impregnowane węgle aktywne)
@@ -30,8 +31,10 @@ Granulowane węgle aktywne - procesy ciągłe, możliwa regeneracja
 Pyłowe węgle aktywne - procesy okresowe
 
 `podobne do p.25 s.1`
+![[Pasted image 20230118145600.png]]
 
 `p.19 s.4`
+![[Pasted image 20230118145629.png]]
 
 
 $a=f(p)$
@@ -43,8 +46,10 @@ $N_2$
 w 77K tylko dla porów >0.7\[n\]
 
 `slajd na podstawie p.19 s.5-6
-
+![[Pasted image 20230118145653.png]]
+![[Pasted image 20230118145705.png]]
 `p.20 s.1`
+![[Pasted image 20230118145720.png]]
 
 Oś Y: ilość zaadsorbowanego gazu (mmol/g)
 Oś X: ciśnienie względne adsorbatu ($p/p^0$) 
