--- a/2 Wtorek/4 Materiały węglowe/MW 22.10.11.md
+++ b/2 Wtorek/4 Materiały węglowe/MW 22.10.11.md
@@ -9,9 +9,11 @@ Eliminacja heteroatomów ze struktury węglowej podczas ogrzewania:
 
 Wzrost zawartości pierwiastka C - uwęglanie
 
-Grafityzacja - przemiana strukturalna termodynamicznie niestabilnego materiału węglowego (turbostatycznego) w grafit w procesie aktywowanym termicznie zachodzącym w fazie stałej
+Grafityzacja - przemiana strukturalna termodynamicznie niestabilnego materiału węglowego (turbostratycznego) w grafit w procesie aktywowanym termicznie zachodzącym w fazie stałej
 
 `Obrazek przedstawiający strukturę grafitu heksagonalnego i węgla turbostratycznego (też warswty ale powyginane i z defektami)`
+
+![[Pasted image 20230118140638.png]]
 
 Warianty karbonizacji:
 
@@ -38,48 +40,43 @@ CCVD - catalytic chemical/**carbon** vapour deposition (pl.katalityczne osadzani
 Unikatowe właściwości materiałów węglowych $\pi$-elektronowych:
 
 * stabilność termiczna do $T=3500^oC$ (bez dostępu tlenu)
-* anizotropia włąsciwości chemicznych, fizycznych i mechanicznych
-    * Wpłaszczyźnie warstwy grafenowej (II) dla grafitu:
+* anizotropia właściwości chemicznych, fizycznych i mechanicznych
+    * W płaszczyźnie warstwy grafenowej (||) dla grafitu:
         * Przewodnictwo cieplne >2000 $\frac{W \cdot K}{m}$
-        * Wytrzymałość na rozciąganie ~20GPa (stal max. 1.4 GPa)
+        * Wytrzymałość na rozciąganie ~20GPa (dla porównania stal max. 1.4 GPa)
         * Moduł Younga ~1000 GPA (stal ~200GPa)
-* odporoność na działanie większości czynników chemicznych, jednocześnie zdolność do tworzenia związków interkalacyjnych i możliwość podstawienia atomów węgla w strukturze
+* odporność na działanie większości czynników chemicznych, jednocześnie zdolność do tworzenia związków interkalacyjnych [^1] i możliwość podstawienia atomów węgla w strukturze
 * zdolność do tworzenia mikroporowatej tekstury o powierzchni wewnętrznej sięgającej 3000 $\frac{m^2}{g}$ (węgiel aktywny)
 
-Interkalacja - wniknięcie heteroatomów pomiędzy wartswty grafitu - często porządana
+[^1]: Interkalacja - wniknięcie heteroatomów pomiędzy warstwy grafitu - często pożądana.
 
 Mikroskopia optyczna w świetle odbitym:
 
-* w świetle spolorayzowanym $\lambda = 590 nm$ - klasyfikacja jednostek optycznie anizotropowych (>0.5 um), analiza tekstury optycznej, histogramy
-* w świetle niespolaryzowanym - analiza tekstury porowatej (>1um)
+* w świetle spolaryzowanym $\lambda = 590 nm$ - klasyfikacja jednostek optycznie anizotropowych (>0.5 $\mu m$), analiza tekstury optycznej, histogramy
+* w świetle niespolaryzowanym - analiza tekstury porowatej (>1$\mu m$)
 
 `Schemat budowy mikroskopu polaryzacyjnego - układ polaryzator - analizator; por. zeszyt`
+![[Pasted image 20230118141804.png]]
 
-Przemiay terminczne węglowodorów (procesy rodnikowe):
-1. Węglowodory parafinowe
-2. kraking, odwodornienie -> Olefiny 
-3. cyklizacja -> Cykloparafiny 
-4. aromatyacja -> Aromaty 
-5.kondensacja -> Wielopierścieniowe aromaty 
-6. polimeryzacja, kondensacja -> Mezowaza 
-7. odwodornienie, sieciowanie -> Półkoks
-8. odwodornienie kondensacja ->Koks
+Przemiany termiczne węglowodorów (procesy rodnikowe):
+![[Pasted image 20230118142056.png]]
 
 Mechanizmy reakcji:
 
-* rozerwanie wiązań C-H. rzadziej C_C, powoduje utworzenie reaktywnych wolnych rodników
+* rozerwanie wiązań C-H. rzadziej C-C, powoduje utworzenie reaktywnych wolnych rodników
 `obrazek - reakcja inicjująca piroliże antracenu`
+![[Pasted image 20230118142336.png]]
 * przebudowa wewnątrzcząsteczkowa
 `obrazek - reakcje wenętrznej przebudowy związków aromatycznych`
-
-`(Polaszek ma obrazki)`
+![[Pasted image 20230118142349.png]]
 
 `Obrazki - sieciowany naftalen vs sieciowany antracen`
+![[Pasted image 20230118142441.png]]
 
-Substancje pakowe - mieszanina węglowodorów z dominującym udziałem wielpierścieniowym węglowodorów aromatycznych:
+Substancje pakowe - mieszanina węglowodorów z dominującym udziałem wielopierścieniowych węglowodorów aromatycznych:
 
 * paki węglowe -stała pozostałość z destylacji smoły koksowniczej
-* paki naftowe - produkty termicznej lub termicznoutleniającej obróbki oleju popirolityczngoe i pozostałości po krakingu katalitycznym
+* paki naftowe - produkty termicznej lub termiczno-utleniającej obróbki oleju pirolitycznego i pozostałości po krakingu katalitycznym
 
 Klasy związków występujących w substancjach pakowych
 
@@ -98,7 +95,7 @@ Porównanie składu paku węglowego i naftowego
 |części nierozpuszczalne w benzenie (toluenie TI) %|28|4-25|
 |części nierozpuszczalne w chinolinie (QI), %| 8-13|<0.5|
 |zawartość siarki % mas,| 0.8-1.0|0.1-1.3|
-zawartość wodoru % mas.|4.5|4-7
-podatność na grafityzację|+|++|
+|zawartość wodoru % mas.|4.5|4-7| 
+|podatność na grafityzację|+|++|
 
-**Paki naftowe** zawierają mniej *części nierozpuszczalne w toluenie - TI*, bo **zawierają więcej związków naftenowo-aromatycznych** o mniejszym stopniu kondensacjii, z większą liczbą i z dłuższymi łańcuchami węglowodorowymi w porównaniu z pakami węglowymi 
+**Paki naftowe** zawierają mniej *części nierozpuszczalne w toluenie - TI*, bo **zawierają więcej związków naftenowo(? naftowo? naftalenowo?)-aromatycznych** o mniejszym stopniu kondensacji, z większą liczbą i z dłuższymi łańcuchami węglowodorowymi w porównaniu z pakami węglowymi 
