--- a/2 Wtorek/4 Materiały węglowe/MW 22.10.18.md
+++ b/2 Wtorek/4 Materiały węglowe/MW 22.10.18.md
@@ -1,98 +1,64 @@
 ### Przemiany substancji pakowej w materiał węglowy
 
-  
-
 Mieszanina węglowodorów (aromatycznych) -> ciekłe kryształy $400^oC$ -> Mezofaza $450^oC$ -> Półkoks $500^oC$ -> Koks (karbonizat) $700^oC$
-
-  
 
 Ciekłe kryształy mogą tworzyć się gdy w mieszaninie węglowodorów jest odpowiednio wysokie stężenie tzw. molekuł mezogennych - dużych płaskich molekuł węglowodorów aromatycznych
 
-  
-
-Uwaga trudne słowo - lamela (?)
-
-  
+Uwaga trudne słowo - lamela
 
 ### Ciekłe kryształy
 
-  
-
 Cechy molekuł tworzących ciekłe kryształy:
-
-  
 
 * kształt wydłużony lub prostoliniowy
 
 * zawierają płaski segment złożony z pierścieni benzenowych, co ułatwia porządkowanie
 
-* są sztywne zdłuż osi głównej
+* są sztywne wzdłuż osi głównej
 
 * zawierają silne dipole i łatwo polaryzujące się grupy
 
-  
-
 Własności stanu ciekłokrystalicznego
-
-  
 
 * plastyczność
 
 * wysoki stopień anizotropii optycznej
 
-* orientowanie się molekuł w polu magntycznym w względem ograniczających powierzchni
+* orientowanie się molekuł w polu magnetycznym w względem ograniczających powierzchni
 
 * zdolność akomodacji substancji nie tworzących ciekłych kryształów
 
-  
-
 ### Mezofaza
 
-  
-
 Mechanizm tworzenia mezofazy
-
-  
 
 1. Tworzenie płaskich molekuł związków aromatycznych w reakcjach w fazie ciekłej
 
 2. Równoległe orientowanie się utworzonych molekuł w wyniku efektu dyspersyjnego
 
-3. Uprzywilejowany wzrost płaskich molekuł (lamel) o srednicach większych niż 2.5 [nm] tworzących zarodki
+3. Uprzywilejowany wzrost płaskich molekuł (lamel) o średnicach większych niż 2.5 [nm] tworzących zarodki
 
 4. Powstawanie skupisk lamel aromatycznych o średnich masach cząsteczkowych ok 500 [u] (anizotropowe sfery mezofazy)
 
 5. Łączenie się (koalescencja) sfer mezofazy prowadzące do powstania różnych form anizotropii
 
-  
-
 > "trochę jak w agar.io" - ja
-
-  
 
 > kolejna opowieść o Raciborzu
 
-  
-
 Morfologia Brooksa - Taylora
-
-  
 
 Budowa
 
-  
-
-* Skład elementarny C - 90-93% mas., H - 3.5-4.0% mas.
+* Skład elementarny: C - 90-93% mas., H - 3.5-4.0% mas.
 
 * gęstość rzeczywista 1.42-1.48 g/cm3
 
-* stopień uporządkowania (XRD) d=0.345-0.347, Lc-2-3nm
-
-  
+* stopień uporządkowania (XRD) d=0.345-0.347, Lc:2-3nm
 
 ### Rentgenowski badania strukturalne (XRD) węgla i materiałów węglowych
 
-To samo co na nanomateriałach
+To samo co na nanomateriałach [[NM 22.10.18]]
 
 ![](https://i.ytimg.com/vi/7lQmShVDJww/sddefault.jpg)
 Dla materiałów węglowych: na preparatach proszkowych metodą Debye'a-Scherrera
@@ -100,4 +66,5 @@ Dla materiałów węglowych: na preparatach proszkowych metodą Debye'a-Scherrer
 Zakres niskich kątów ugięcia dostarcza informacji o rozmieszczeniu i wymiarach porów
 
 Zakres średnich kątów ugięcia dostarcza informacji o stopniu upakowania warstw węglowych w krystalicie
-Zakres wysokich kątów 
+
+Zakres wysokich kątów...
