--- a/2 Wtorek/4 Materiały węglowe/MW 22.12.20.md
+++ b/2 Wtorek/4 Materiały węglowe/MW 22.12.20.md
@@ -73,3 +73,4 @@ Zastosowania nanowłókien/nanorurek węglowych:
 
 `p.35 s.4`
 Jest "ablacja laserowa", ma być "odparowanie laserowe"
+Osadzanie z fazy gazowej - CVD, cabon vapour deposition 
