--- a/2 Wtorek/4 Materiały węglowe/MW 22.10.11.md
+++ b/2 Wtorek/4 Materiały węglowe/MW 22.10.11.md
@@ -17,9 +17,9 @@ Grafityzacja - przemiana strukturalna termodynamicznie niestabilnego materiału 
 
 Warianty karbonizacji:
 
-|Substancja organiczna|Typ pirolizy|
+|Substancja organiczna| Typ pirolizy|
 |-|-|
-|Surowce o budowie polimerycznej lub makromolekularnej (koplane paliwa stałem substancje lignocelulozowe, polimery syntetycnze)| piroliza w fazie stałej - chaotyczne ułożenie krystalitów, materiały węglowe niegrafityzujące|
+|Surowce o budowie polimerycznej lub makromolekularnej (kopalne paliwa stałem substancje lignocelulozowe, polimery syntetycnze)| piroliza w fazie stałej - chaotyczne ułożenie krystalitów, materiały węglowe niegrafityzujące|
 |Mieszaniny węglowodorów, pochodzenie karbo- i petrochemiczne (paki węglowe i naftowe, smoły, ciężkie frakcje z przerobu ropy naftowej)| piroliza w fazie ciekłej - zorientowane ułożenie krystalitów| Materiały węglowe grafityzujące|
 
 
