--- a/2 Wtorek/4 Materiały węglowe/MW 22.11.22.md
+++ b/2 Wtorek/4 Materiały węglowe/MW 22.11.22.md
@@ -5,7 +5,7 @@ Metody otrzymywania węgli aktywnych:
 
 | |Surowiec| | 
 |-|-|-|
-|$\downarrow$|$\downarrow$ (aktywacja fizyczna)|$\downarrow$|
+|$\downarrow$ aktywacja chemiczna|$\downarrow$ aktywacja fizyczna|$\downarrow$ aktywacja chemiczna|
 | obróbka termiczna, przemywanie| karbonizacja, selektywne zgazowanie| karbonizacja, obróbka termiczna, przemywanie|
 |impregnacja $H_3PO_4,ZnCl_2,KOH,NaOH$| Para wodna, $CO_2$| mieszanie z $KOH,NaOH$|
 |$\downarrow$|$\downarrow$|$\downarrow$|
