--- a/2 Wtorek/4 Materiały węglowe/MW 22.11.29.md
+++ b/2 Wtorek/4 Materiały węglowe/MW 22.11.29.md
@@ -43,7 +43,7 @@ $T=const.$
 Izotermy adsorpcji przedstawiają zależność ilości zaadsorbowanej substancji (mmol/g) lub objętości zaadsorbowanego gazu ($czm^3/g$ od równowagowego ciśnienia parcjalnego $p/p_0$ w stałej temperaturze).
 
 $N_2$
-w 77K tylko dla porów >0.7\[n\]
+w 77K tylko dla porów >0.7\[nm\]
 
 `slajd na podstawie p.19 s.5-6`
 
